# ndpatchify

./: .gitignore  README.md  pyproject.toml
src/ndpatchify/: _utils.py  patch_utils.py
tests/: patch_utils_test.py
