[project]
name = "ndpatchify"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Chunxu Guo", email = "chunxu@wustl.edu" }
]
dependencies = [
    "xarray>=2024.3.0",
    "torch>=2.3.0",
    "numpy>=1.26.4",
    "jaxtyping>=0.2.28",
    "optree>=0.11.0",
    "beartype>=0.18.5",
    "plum-dispatch>=2.3.5",
    "jax[cpu]>=0.4.26",
    "pytest>=8.2.2",
    "mri-nufft>=0.9.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
    "icecream>=2.1.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ndpatchify"]

[tool.ruff]
lint.ignore = ["F722", "F821", "F811"]